# DotNetCore2018

./: .gitignore  DotNetCore2018.sln  README.md  TODO.md  azure-pipelines.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
DotNetCore2018.Business/: DotNetCore2018.Business.csproj
DotNetCore2018.Business/Services/: AuthenticationService.cs  CategoryService.cs  DataService.cs  EmailSender.cs  FileService.cs  UserStore.cs
DotNetCore2018.Business/Specifications/: AndSpecification.cs  FuncSpecification.cs  IdSpecification.cs  Specification.cs
DotNetCore2018.ConsoleApp/: DotNetCore2018.ConsoleApp.csproj  Program.cs
DotNetCore2018.Core/: IHasId.cs
DotNetCore2018.Core/Breadcrumbs/: BreadcrumbAttribute.cs  BreadcrumbCollector.cs  BreadcrumbNode.cs  BreadcrumbPathResolver.cs
DotNetCore2018.Data/: AppContext.cs  DatabaseContext.cs  DotNetCore2018.Data.csproj  IHasId.cs
DotNetCore2018.Data/Entities/: Category.cs  Product.cs  (+3 more)
DotNetCore2018.ResourceGroup/: Deploy-AzureResourceGroup.ps1  DotNetCore2018.ResourceGroup.deployproj  WebSiteSQLDatabase.json  WebSiteSQLDatabase.parameters.json
DotNetCore2018.SwaggerClient/: DotNetCore2018.SwaggerClient.csproj  DotNetCore2018Client.cs
DotNetCore2018.Tests/: CategoryControllerTests.cs  DotNetCore2018.Tests.csproj  TestHelper.cs
DotNetCore2018.WebApi/: Constants.cs  Dockerfile  DockerfileBuildUI  DotNetCore2018.WebApi.csproj  NLog.config  Program.cs  Startup.cs  add_migration.bat  appsettings.Development.json  appsettings.json  build.bat  package-lock.json  package.json  remove_migration.bat  update_database.bat  webpack.common.js  webpack.config.js  webpack.dev.js
DotNetCore2018.WebApi/src/ui/: .dockerignore  Cargo.toml  Dockerfile  build.bat  build_ui.sh  check.bat  docker_run.bat  index.js  package.json
DotNetCore2018.WebApi/src/ui/src/: fetch.rs  jquery.rs  lib.rs
WebApi/: Startup.cs
nginx/: nginx.conf
(+109 files in other folders)
