[package]
name = "ui"
version = "0.1.0"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", version = "0.2.22" }
futures = "0.1.24"
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen", version = "0.2.22" }
serde = "1.0.79"
serde_derive = "1.0.79"
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", version = "0.2.7" }

[dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
version = "0.1.0"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Element'
]
