[package]
name = "ui"
version = "0.1.0"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.23"
futures = "0.1.24"
wasm-bindgen-futures = "0.3.0"
serde = "1.0.79"
serde_derive = "1.0.79"
js-sys = "0.3.0"
console_error_panic_hook = "0.1.5"
wee_alloc = "0.4.2"

[dependencies.web-sys]
version = "0.3.0"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Element'
]
